# quasar

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml
apps/frontend/: babel.config.cjs  index.html  jest.config.cjs  jest.setup.js  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
apps/frontend/src/: App.detail.test.tsx  App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
apps/frontend/src/components/: ActivityPanel.test.tsx  ActivityPanel.tsx  AssigneeAvatars.tsx  Avatar.tsx  Filters.test.tsx  Filters.tsx  ItemDetailModal.test.tsx  ItemDetailModal.tsx  PeoplePage.test.tsx  PeoplePage.tsx  StatusChart.test.tsx  StatusChart.tsx  SummaryCards.test.tsx  (+3 more)
crates/quasar/: Cargo.toml
crates/quasar/src/: api.rs  cache.rs  config.rs  domain.rs  lib.rs  main.rs
crates/quasar/src/adapters/: github.rs  jira.rs
crates/quasar/src/clients/: command_runner.rs
crates/quasar/tests/fixtures/github/: issue-detail.json  issues.json
crates/quasar/tests/fixtures/jira/: issue-detail.json  issues.json
docs/plans/: 2026-07-07-detail-dates-and-status-design.md  2026-07-07-detail-dates-and-status.md  2026-07-07-editable-dates-design.md  2026-07-07-editable-dates.md  2026-07-07-item-detail-overlay-design.md  2026-07-07-item-detail-overlay.md  2026-07-10-assignee-multiselect-and-editing-design.md  2026-07-10-assignee-multiselect-and-editing.md  2026-07-10-faster-refresh-design.md  2026-07-10-faster-refresh.md  2026-07-10-jira-people-queries-design.md  2026-07-10-jira-people-queries.md  2026-07-10-people-page-design.md  2026-07-10-people-page.md
