[package]
name = "quasar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
toml = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
